--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -61,6 +61,7 @@
   color: #fd0037;
   border-bottom: 0.1px solid #fd0037;
   padding-bottom: 1px;
+  margin-left: 5px;
 }
 .projects p {
   opacity: 1;
